--- a/class.html
+++ b/class.html
@@ -10,39 +10,30 @@
         height:200px;
         border-radius:10px;
     }
-    .grad1{
-        background:blue;
-        background:linear-gradient(to right bottom,white,blue);
-    }
-    .grad2{
-        background:#f00;
-        background: linear-gradient(45deg,#f00,#fff);
-    }
-    .grad3{
-        background:#06f;
-        background:linear-gradient(to bottom,#06f,white 30%,#06f);
-    }
     .radial1{
-        background:red;
-        background:radial-gradient(white,yellow,red);
+        width:200px;
+        height:200px;
+        border-radius:50%;
+        background:blue;
+        background:radial-gradient(circle at 20% 20%,white,blue);
     }
-    .radial2{
+    .repeat1{
         background:red;
-        background:radial-gradient(circle,white,yellow,red);
+        background:repeating-linear-gradient(yellow,red 20px);
+    }
+    .repeat2{
+        background:#ccc;
+        background:repeating-radial-gradient(circle,white,#ccc 10%);
     }
     </style>
 </head>
 <body>
-    <h3>1.선형 그러데이션</h3>
+    <h3>1.위치키워드를 사용한 원형 그러데이션 만들기</h3>
+    <div class="radial1"></div>
+    <h3>2.그러데이션 반복하기</h3>
     <ul>
-        <li class="grad1">왼쪽위에서 오른쪽 아래방향</li>
-        <li class="grad2">45도(오른쪽 위)방향으로</li>
-        <li class="grad3">위에서부터 30% 위치에 색상 중지점</li>
-    </ul>
-    <h3>2.원형 그러데이션(radial-gradient)</h3>
-    <ul>
-        <li class="radial1"></li>
-        <li class="radial2"></li>
+        <li class="repeat1"></li>
+        <li class="reapeat2"></li>
     </ul>
 </body>
 </html>
