--- a/class.html
+++ b/class.html
@@ -33,7 +33,7 @@
     <h3>2.그러데이션 반복하기</h3>
     <ul>
         <li class="repeat1"></li>
-        <li class="reapeat2"></li>
+        <li class="repeat2"></li>
     </ul>
 </body>
 </html>
