--- a/class.html
+++ b/class.html
@@ -1,97 +1,215 @@
 <!DOCTYPE html>
 <html lang="ko">
-<head>
-    <meta charset="UTF-8">
+  <head>
+    <meta charset="UTF-8" />
     <title>웹페이지 레이아웃</title>
     <style>
-        #container{
-            width:800px;
-            margin:0 auto;
-        }
-        ul{
-            list-style:none;
-        }
-        ul li {
-            float:left;
-        }
-        a{
-            display:block;
-            padding:10px 20px;
-            background-color:#ccc;
-        }
-        a:link,a:visited{
-            color:black;
-            text-decoration:none;
-        }
-        a:hover{
-            color:#fff;
-            background-color:blueviolet;
-        }
-        h2{
-            margin:10px;
-            clear:left;
-            padding:10px 20px;
-        }
-        p{
-            line-height:20px;
-            font-size:12px;
-        }
-        article{
-            float:left;
-            width:350px;
-            height:200px;
-            margin:10px;
-            padding:10px;
-            border:1px solid #ccc;
-        }
-        footer{
-            clear:left;
-            width:100%;
-            height:50px;
-            background-color:#222;
-        }
-        footer > p{
-            color:#fff;
-            font-size:0.9em;
-            text-align:center;
-            line-height:50px;
-        }
+      @import url("https://fonts.googleapis.com/css2?family=Merienda:wght@700&display=swap");
+
+      * {
+        margin: 0; /* 마진 리셋 */
+        padding: 0; /* 패딩 리셋 */
+        box-sizing: border-box; /* 박스 영역은 테두리까지 */
+      }
+      a {
+        text-decoration: none; /* 텍스트 링크 밑줄 없애기 */
+      }
+      ul {
+        list-style: none;
+      }
+
+      #container {
+        margin: 0 auto; /* 화면 중앙에 배치 */
+        width: 1200px; /* 너비 */
+        background-color: #fff;
+      }
+
+      /*********************************/
+      /* 헤더 영역 - 로고와 내비게이션 */
+      /*********************************/
+
+      header {
+        width: 100%; /*  너비 */
+        height: 100px; /* 높이 */
+        background-color: #045;
+      }
+
+      /* 로고 */
+      #logo {
+        float: left; /* 왼쪽으로 플로팅 */
+        width: 250px; /*  너비 */
+        height: 100px; /* 높이 */
+        line-height: 100px; /* 세로로 중간에 맞춤 - 줄간격을 높이 값과 같게 */
+        padding-left: 20px; /* 왼쪽에 여백 */
+      }
+      #logo h1 {
+        font-family: "Merienda", cursive;
+        font-weight: 700;
+        font-size: 40px; /* 글자 크기 */
+        color: #fff; /* 글자 색*/
+        text-shadow: 0 -1px 0 #222; /* 그림자 색 */
+      }
+
+      /* 내비게이션 */
+      nav {
+        float: right; /* 오른쪽으로 플로팅 */
+        width: 900px; /*   너비 */
+        height: 100px; /* 메뉴 영역 높이 */
+        padding-top: 40px; /* 메뉴를 아래로 내리기 위해 */
+      }
+      #topMenu {
+        height: 60px;
+      }
+      #topMenu > li {
+        float: left; /* 메뉴 항목을 왼쪽으로 플로팅 */
+        position: relative;
+      }
+      #topMenu > li > a {
+        display: block; /* 링크 텍스트는 블록으로 */
+        font-size: 1.1em;
+        color: #fff; /* 글자 색 */
+        font-weight: 600; /* 글자 굵기 */
+        padding: 20px 60px; /* 패딩 */
+      }
+      #topMenu > li > a:hover {
+        color: #1fa8f8;
+        text-shadow: 0 -2px #222;
+      }
+
+      /* 본문 */
+
+      .contents {
+        width: 1000px;
+        margin: 50px auto;
+      }
+      main > section {
+        margin-top: 60px;
+      }
+      main h2 {
+        font-size: 1.5em;
+        line-height: 2.5;
+      }
+      main div {
+        margin-top: 20px;
+      }
+      main h3 {
+        font-size: 1.2em;
+        line-height: 2.2;
+      }
+      .detail p {
+        line-height: 2;
+        color: #222;
+      }
+      .detail > img {
+        float: left;
+        margin-right: 50px;
+        border-radius: 20px;
+      }
+      .schedule h4 {
+        font-size: 1.2em;
+      }
+      .schedule ul {
+        list-style: none;
+      }
+      .schedule ul li {
+        line-height: 2;
+      }
+
+      /******************/
+      /*   푸터 영역    */
+      /******************/
+
+      footer {
+        width: 1200px; /* 너비 */
+        height: 100px; /* 높이 */
+        border-top: 2px solid #222;
+      }
+      #bottomMenu {
+        width: 100%;
+        height: 20px;
+        margin-left: 60px;
+      }
+      #bottomMenu ul {
+        margin-top: 15px;
+      }
+      #bottomMenu ul li {
+        float: left; /* 가로로 배치 */
+        padding: 5px 20px;
+        border-right: 1px solid #ddd; /* 항목 오른쪽에 테두리 */
+      }
+      #bottomMenu ul li:last-child {
+        border: none; /* 마지막 항목에는 오른쪽 테두리 없음 */
+      }
+      #bottomMenu ul li a,
+      #bottomMenu ul li a:visited {
+        font-size: 15px; /* 글자 크기 */
+        color: #666; /* 글자 색 */
+      }
     </style>
-</head>
-<body>
+  </head>
+  <body>
     <div id="container">
-        <header>
+      <header>
+        <div id="logo">
+          <a href="index-footer.html">
+            <h1>Dream Jeju</h1>
+          </a>
+        </div>
         <nav>
-            <ul>
-                <li><a href=#>메뉴1</a></li>
-                <li><a href=#>메뉴2</a></li>
-                <li><a href=#>메뉴3</a></li>
-                <li><a href=#>메뉴4</a></li>
-            </ul>
+          <ul id="topMenu">
+            <li><a href="#">단체 여행</a></li>
+            <li><a href="#">맞춤 여행</a></li>
+            <li><a href="#">갤러리</a></li>
+            <li><a href="#">문의하기</a></li>
+          </ul>
         </nav>
-        </header>
-        <section>
-            <h2>강아지 용품 준비하기</h2>
-            <article>
-                <h3>강아지 집</h3>
-                <p>강아지가 편히 쉴 수 있는 포근한 집이 필요합니다. 강아지의 집은 강아지가 다 큰 후에도 계속 쓸 수 있는 집으로 구입하세요.집을 구입하실 때는 박음질이 잘 되어 있는지, 세탁이 간편한 제품인지 꼭 확인하시고 고르시는 것이 좋습니다.</p>
-            </article>
-            <article>
-                <h3>강아지 먹이</h3>
-                <p>강아지의 먹이는 꼭 어린 강아지용으로 나와있는 사료를 선택하세요. 강아지들은 사람에 비해 성장속도가 8배정도 빠르답니다. 따라서 강아지에게는 성장속도에 맞는 사료를 급여하셔야 합니다. 사람이 먹는 음식을 먹게 되면 양념과 향신료에 입맛이 익숙해지고, 비만이 될 가능성이 매우 높아집니다. 강아지용 사료는 생후 12개월까지 급여하셔야 합니다.</p>
-            </article>
-            <article>
-                <h3>밥그릇, 물병</h3>
-                <p>밥그릇은 쉽게 넘어지지 않도록 바닥이 넓은 것이 좋습니다.물병은 대롱이 달린 것으로 선택하세요. 밥그릇에 물을 주게 되면 입 주변에 털이 모두 젖기 때문에 비위생적이므로 대롱을 통해서 물을 먹을 수 있는 물병을 마련하시는 것이 좋습니다.</p>
-            </article>
-            <article>
-                <h3>이름표, 목줄</h3>
-                <p>강아지를 잃어버릴 염려가 있으니 산책할 무렵이 되면 이름표를 꼭 목에 걸어주도록 하세요. 그리고 방울이 달린 목걸이를 하고자 하실 때는 신중하셔야 합니다. 움직일 때마다 방울이 딸랑 거리면 신경이 예민한 강아지들에게는 좋지 않은 영향을 끼칠 수 있기 때문입니다.</p>
-            </article>
+      </header>
+      <main class="contents">
+        <section id="headling">
+          <h2>몸과 마음이 치유되는 섬</h2>
+          <div class="detail">
+            <img src="images/healing.jpg" />
+            <b><p>쉼(Healing)의 공간으로 안내합니다</p></b>
+            <p>
+              탁 트인 바다, 시원한 바람에 몸을 맡기고 뚜벅뚜벅 오름을 오르고
+              올렛길을 걷다보면 온전히 나에게 집중할 수 있습니다.
+            </p>
+          </div>
+          <div class="schedule">
+            <h3>상세 일정</h3>
+            <ul>
+              <li>여행 기간 : 2박 3일</li>
+              <li>
+                여행 일정 : (여행 일정은 상담을 통해 결정 및 조정 가능합니다
+              </li>
+            </ul>
+          </div>
         </section>
-        <footer>
-            <p>boxmodel 연습하기</p>
-        </footer>
+        <section id="activity">
+          <h2>다양한 액티비티가 기다리는 섬</h2>
+          <div class="detail">
+            <img src="images/activity.jpg" />
+            <b><p>모험과 스릴이 넘치는 레저의 천국으로 안내합니다.</p></b>
+            <p>둘러보기만 하는 여행을 하셨나요?</p>
+            <p>
+              하늘을 날며 시원한 바다를 내려다보는 패러글라이등과 투명한 물빛
+              속을 여행하는 스킨스쿠버... 아름다운 제주 해안도로를 씽씽
+              전동바이크나 전동킥보드로 달려보세요. 시원한 바다를 가까이에서
+              느낄 수 있는 요트 체험과 배낚시도 빼놓을 수 없겠죠?
+            </p>
+          </div>
+        </section>
+      </main>
+      <footer>
+        <section id="bottomMenu">
+          <ul>
+            <li><a href="#">회사 소개</a></li>
+            <li><a href="#">개인정보처리방침</a></li>
+            <li><a href="#">여행약관</a></li>
+            <li><a href="#">사이트맵</a></li>
+          </ul>
+        </section>
+      </footer>
     </div>
-</body>
+  </body>
 </html>
