--- a/class.html
+++ b/class.html
@@ -2,148 +2,109 @@
 <html lang="ko">
   <head>
     <meta charset="UTF-8" />
-    <title>웹페이지 레이아웃</title>
+    <title>Transition</title>
     <style>
-      #container{
-        width:1200px;
-        height:200px;
-        margin:40px auto;
-        font-size:11px;
-      }
-      .origin{
-        width:100px;
-        height:100px;
-        border:1px solid black;
-        float:left;
-        margin:20px 40px;
-      }
-      .origin > div {
-        width:100px;
-        height:100px;
-        background-color:orange;
-      }
-      h2{
-        clear:left;
-      }
-    #movex:hover{
-      transform:translateX(50px);
-    }
-    #movey:hover{
-      transform:translateY(20px);
-    }
-    #movexy:hover{
-      transform:translate(10px,20px);
-    }
-    #scalex:hover{
-      transform:scaleX(2);
-    }
-    #scaley:hover{
-      transform:scaleY(1.5);
-    }
-    #scale:hover{
-      transform:scale(0.7);
-    }
-    #rotate1:hover{
-      transform:rotate(40deg);
-    }
-    #rotate:hover{
-      transform:rotate(-40deg);
-    }
-    #pers{
-      perspective:300px;
-    }
-    .rotatex:hover{
-      transform:rotateX(50deg);
-    }
-    .rotatey:hover{
-      transform:rotatey(50deg);
-    }
-    .rotatez:hover{
-      transform:rotatez(50deg);
-    }
-    .rotatexyz:hover{
-      transform:rotate3d(2.5,1.2,-1.5,55deg);
-    }
-    .skewx:hover{
-      transform:skewx(20deg);
-    }
-    .skewy:hover{
-      transform:skewY(15deg);
-    }
-    .skewxy:hover{
-      transform:skew(-25deg,-15deg);
-    }
-    img{
+    #basic div{
       width:100px;
       height:100px;
-      object-fit:cover;
+      float:left;
+      margin:30px;
+    }
+    .bg-tr1{
+      background-color: skyblue;
+      transition-property:all;
+      transition-timing-function:ease;
+      transition-duration:1s;
+    }
+    .bg-tr1:hover{
+      background-color:blue;
+    }
+    .border-tr2{
+      background-color:orange;
+      border:3px solid black;
+      transition-timing-function:linear;
+      transition-duration:1.5s;
+    }
+    .border-tr2:hover{
+      border:3px solid red;
+      border-radius:50%;
+    }
+    .box3{
+      float:left;
+      margin:30px auto;
+      width:100px;
+      height:100px;
+      background-color:blue;
+      color:white;
+      border:1px solid darkgray;
+      transition-property:width,height;
+      transition-duration: 2s,1s;
+    }
+    .box3:hover{
+      width:200px;
+      height:120px;
+    }
+    .box4{
+      margin:50px auto;
+      width:100px;
+      height:100px;
+      background-color:orange;
+      border:1px solid #222;
+      transition-property: all;
+      transition: 2s ease-in;
+    }
+    .box4:hover{
+      width:200px;
+      height:200px;
+      background-color:orangered;
+      transform:rotate(720deg);
+    }
+    #ex div{
+      float:left;
+      width:150px;
+      height:50px;
+      margin:5px 10px;
+      padding:5px;
+      color:white;
+      background-color:#006aff;
+      border-radius:5px;
+      text-align:center;
+      font-weight:bold;
+    }
+    #ex:hover div{
+      height:400px;
+    }
+    #ex .ease{
+      transition:3s ease;
+    }
+    #ex .linear{
+      transition: 3s linear;
+    }
+    #ex .ease-in{
+      transition:3s ease-in;
+    }
+    #ex .ease-out{
+      transition:3s ease-out;
+    }
+    #ex .ease-in-out{
+      transition:3s ease-in-out;
     }
     </style>
   </head>
   <body>
-    <div id="container">
-      <h2>transform: 변형함수(translate : 이동, scale:크기,rotate :회전,perspective :원근감)</h2>
-      <div class="origin">
-        <div id="movex">translateX(50px)</div>
-      </div>
-      <div class="origin">
-        <div id="movey">translateY(20px)</div>
-      </div>
-      <div class="origin">
-        <div id="movexy">translate(10px, 20px)</div>
-      </div>
-      <div class="origin">
-        <div id="scalex">scaleX(2)</div>
-      </div>
-      <div class="origin">
-        <div id="movey">scaleY(1.5)</div>
-      </div>
-      <div class="origin">
-        <div id="scale">scale(0.7)</div>
-      </div>
-      <div class="origin", id="rotate1">rotate(40deg)
-        <img src="images/tree.jpg">
-      </div>
-      <div class="origin", id="rotate">rotate(-40deg)
-        <img src="images/tree.jpg">
-      </div>
-      <div class="origin", id="perspective">
-        <div class="rotatex">perspective x
-          <img src="images/sunset.jpg" alt="">
-        </div>
-      </div>
-      <div class="origin", id="perspective">
-        <div class="rotatey">perspective y
-          <img src="images/sunset.jpg" alt="">
-        </div>
-      </div>
-      <div class="origin", id="perspective">
-        <div class="rotatez">perspective z
-          <img src="images/sunset.jpg" alt="">
-        </div>
-      </div>
-      <div class="origin", id="perspective">
-        <div class="rotatexyz">perspective xyz
-          <img src="images/sunset.jpg" alt="">
-        </div>
-      </div>
-      <br>
-      <h2>transform: 변형함수(skew : 비틀기)</h2>
-      <div class="origin">
-        <div class="skewx">skewx
-          <img src="images/tree.jpg" alt="">
-        </div>
-      </div>
-      <div class="origin">
-        <div class="skewy">skewy
-          <img src="images/tree.jpg" alt="">
-        </div>
-      </div>
-      <div class="origin">
-        <div class="skewxy">skewxy
-          <img src="images/tree.jpg" alt="">
-        </div>
-      </div>
+    <div id="basic">
+      <div class="bg-tr1">1.배경색 1초간 전이</div>
+      <div class="border-tr2">2.테두리 1.5초간 전이</div>
+    </div>
+    <div class="box3">3.너비는 2초,높이는 1초간 전이</div>
+    <div class="box4">4.회전하면서 너비,높이,배경색바뀜</div>
+    <p style="clear:left">5.트랜지션 속도곡선(transition-timing-fuction)</p>
+    <div id="ex">
+      <div class="ease">ease<br>(천천히 시작하고 점점 빨라지다 천천히 끝냄,기본값)</div>
+      <div class="linear">liner<br>(처음부터 끝까지 같은 속도)</div>
+      <div class="ease-in">ease-in<br>(느리게 시작함)</div>
+      <div class="ease-out">ease-out<br>(느리게 끝냄)</div>
+      <div class="ease-in-out">ease-in-out<br>(느리게 시작하고 느리게 끝냄)</div>
     </div>
   </body>
 </html>
