--- a/class.html
+++ b/class.html
@@ -2,109 +2,81 @@
 <html lang="ko">
   <head>
     <meta charset="UTF-8" />
-    <title>Transition</title>
+    <title>프랜지션과 애니메이션</title>
     <style>
-    #basic div{
-      width:100px;
-      height:100px;
+    #container{
+      width:1000px;
+      margin: 20px auto;
+    }
+    h1{
+      text-align: center;
+    }
+    ul{
+      list-style:none;
+      padding:0;
+    }
+    li{
       float:left;
-      margin:30px;
+      padding:0;
+      margin:10px;
+      overflow:hidden;
+      position:relative;
     }
-    .bg-tr1{
-      background-color: skyblue;
-      transition-property:all;
-      transition-timing-function:ease;
-      transition-duration:1s;
-    }
-    .bg-tr1:hover{
-      background-color:blue;
-    }
-    .border-tr2{
-      background-color:orange;
-      border:3px solid black;
-      transition-timing-function:linear;
-      transition-duration:1.5s;
-    }
-    .border-tr2:hover{
-      border:3px solid red;
-      border-radius:50%;
-    }
-    .box3{
+    img{
       float:left;
-      margin:30px auto;
-      width:100px;
-      height:100px;
-      background-color:blue;
-      color:white;
-      border:1px solid darkgray;
-      transition-property:width,height;
-      transition-duration: 2s,1s;
+      margin:0;
+      padding:0;
+      z-index:5;
     }
-    .box3:hover{
-      width:200px;
-      height:120px;
-    }
-    .box4{
-      margin:50px auto;
-      width:100px;
-      height:100px;
-      background-color:orange;
-      border:1px solid #222;
-      transition-property: all;
-      transition: 2s ease-in;
-    }
-    .box4:hover{
-      width:200px;
+    .caption{
+      position:absolute;
+      top:200px;
+      width:300px;
       height:200px;
-      background-color:orangered;
-      transform:rotate(720deg);
+      padding-top:20px;
+      background:rgba(0,0,0,0.6);
+      opacity:0;
+      transition:all 0.6s ease-in-out;
+      z-index:10;
     }
-    #ex div{
-      float:left;
-      width:150px;
-      height:50px;
-      margin:5px 10px;
-      padding:5px;
+    li:hover .caption{
+      opacity:1;
+      transform:translateY(-200px);
+    }
+    .caption h2, .caption p {
       color:white;
-      background-color:#006aff;
-      border-radius:5px;
       text-align:center;
-      font-weight:bold;
-    }
-    #ex:hover div{
-      height:400px;
-    }
-    #ex .ease{
-      transition:3s ease;
-    }
-    #ex .linear{
-      transition: 3s linear;
-    }
-    #ex .ease-in{
-      transition:3s ease-in;
-    }
-    #ex .ease-out{
-      transition:3s ease-out;
-    }
-    #ex .ease-in-out{
-      transition:3s ease-in-out;
     }
     </style>
   </head>
   <body>
-    <div id="basic">
-      <div class="bg-tr1">1.배경색 1초간 전이</div>
-      <div class="border-tr2">2.테두리 1.5초간 전이</div>
-    </div>
-    <div class="box3">3.너비는 2초,높이는 1초간 전이</div>
-    <div class="box4">4.회전하면서 너비,높이,배경색바뀜</div>
-    <p style="clear:left">5.트랜지션 속도곡선(transition-timing-fuction)</p>
-    <div id="ex">
-      <div class="ease">ease<br>(천천히 시작하고 점점 빨라지다 천천히 끝냄,기본값)</div>
-      <div class="linear">liner<br>(처음부터 끝까지 같은 속도)</div>
-      <div class="ease-in">ease-in<br>(느리게 시작함)</div>
-      <div class="ease-out">ease-out<br>(느리게 끝냄)</div>
-      <div class="ease-in-out">ease-in-out<br>(느리게 시작하고 느리게 끝냄)</div>
+    <div id="container">
+      <ul>
+        <li>
+          <img src="images/prod1.jpg" alt="">
+          <div class="caption">
+            <h2>상품1</h2>
+            <p>상품 1 설명 텍스트</p>
+            <p>가격 : 12,345원</p>
+          </div>
+        </li>
+        <li>
+          <img src="images/prod2.jpg" alt="">
+          <div class="caption">
+            <h2>상품2</h2>
+            <p>상품 2 설명 텍스트</p>
+            <p>가격 : 12,345원</p>
+          </div>
+        </li>
+        <li>
+          <img src="images/prod3.jpg" alt="">
+          <div class="caption">
+            <h2>상품3</h2>
+            <p>상품 3 설명 텍스트</p>
+            <p>가격 : 12,345원</p>
+          </div>
+        </li>
+      </ul>
     </div>
   </body>
 </html>
