--- a/change.html
+++ b/change.html
@@ -28,7 +28,7 @@
             get1.style.color = "red";
         }
         var get2 = document.querySelector("#pink");
-        get2.onclick=function(){
+        get2.onmouseover=function(){
             get2.style.color = "yellow";
         }
     </script>
