--- a/dom03.html
+++ b/dom03.html
@@ -9,10 +9,14 @@
         .highlight{
             color:red;
         }
+        .highlight2{
+            color:pink;
+        }
     </style>
 </head>
 <body>
     <button id="myButton">클릭하세요!</button>
+    <button id="myButton2">클릭하세요!</button>
     <h1>첫 번째 제목</h1>
     <h1>2 번째 제목</h1>
     <h1>3 번째 제목</h1>
@@ -20,6 +24,9 @@
     <h1>5 번째 제목</h1>
     <h1>6 번째 제목</h1>
     <h2>첫 번째 제목</h2>
+    <p>dsjofwefowewi</p>
+    <p>dsjofwefowewi</p>
+    <p>dsjofwefowewi</p>
     <script>
         //버튼요소 가져오기
         const button = document.getElementById("myButton");
@@ -30,6 +37,17 @@
             const h1Elements = document.querySelectorAll("h1");
             for(let i = 0;i < h1Elements.length;i++){
                 h1Elements[i].classList.add("highlight");
+            }
+        });
+
+        const button2 = document.getElementById("myButton2");
+
+        button2.addEventListener("click",function() {
+            button2.textContent="클릭되었습니다!";
+
+            const pElements = document.querySelectorAll("p");
+            for(let i = 0;i < pElements.length;i++){
+                pElements[i].classList.add("highlight2");
             }
         });
     </script>
