--- a/study.html
+++ b/study.html
@@ -1,56 +1,25 @@
 <!DOCTYPE html>
-<html lang="ko">
+<html>
 <head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>자바스크립트 이벤트</title>
-    <style>
-        #item {
-			position:relative;
-			width:500px;
-			height:auto;
-			padding:15px 20px;
-			margin:auto;
-		}
-		button {
-			background-color:rgba(255,255,255,0.7);;
-			padding:5px;
-			border:1px solid #ccc;
-			font-size:0.8em;			
-		}
-		.over {
-			position:absolute;
-			left:30px;
-			bottom:30px;
-		}
-		.detail {
-			width:400px;
-			text-align:left;			
-			line-height:1.8;
-			display:none;
-		}
-    </style>
+    <title>onoff</title>
 </head>
 <body>
-	<img src="images/flower.jpg" alt="">
-    <button class="over" id="open" onclick="showDetail() ">상세 설명 보기</button>
-    <div id="desc" class="detail">
-        <h4>무궁화</h4>
-        <p>북아메리카 원산으로 각지에서 관상초로 흔히 심고 있는 귀화식물이다. 길가나 잔디밭에서 흔히 볼 수 있다. 아주 작은 씨앗을 무수히 많이 가지고 있는데 바람을 이용해 씨앗들을 날려보내거나, 뿌리줄기를 통해 동일한 개체들을 많이 만들어 냄으로써 번식한다. </p>
-        <button id="close" >상세 설명 닫기</button>
-    </div>
+    <h2>What Can JavaScript Do?</h2>
+    <p>HavaScript can change HTML attribute values.</p>
+    <p>In this case JavaScript changes the value of the src (source) attribute of an image.</p>
+    <button id="on" onclick="turnOn()">Turn on</button>
+    <img id="myImage" src="./img/off.png" style="width:300px">
+    <button id ="off" onclick="turnOff()">Trun off</button>
     <script>
-        let $descDiv = document.getElementById('desc');
-        let $openBtn = document.getElementById('open'); 
-        let $closeBtn = document.getElementById('close');
-        function showDetail(){
-            $descDiv.style.display="block";
-            $openBtn.style.display="none";
+        onBtn = document.getElementById("on");
+        offBtn=document.getElementById("off");
+        lightImg=document.getElementById("myImage");
+        function turnOn(){
+            lightImg.src="./img/on.png";
         }
-        $closeBtn.addEventListener('click',()=>{
-            $descDiv.style.display="none";
-            $openBtn.style.display="block";
-        })
+        function turnOff(){
+            lightImg.src="./img/off.png";
+        }
     </script>
 </body>
-</html>  
+</html>
