--- a/study.html
+++ b/study.html
@@ -1,24 +1,22 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>onoff</title>
+    
+    </style>
 </head>
 <body>
-    <h2>What Can JavaScript Do?</h2>
-    <p>HavaScript can change HTML attribute values.</p>
-    <p>In this case JavaScript changes the value of the src (source) attribute of an image.</p>
-    <button id="on" onclick="turnOn()">Turn on</button>
-    <img id="myImage" src="./img/off.png" style="width:300px">
-    <button id ="off" onclick="turnOff()">Trun off</button>
+    <h1>자바스크립트 배열</h1>
+    <h2>forEach() Method</h2>
+    <p>forEach()문은 배열의 각 요소를 반복해서 참조하는 함수를 호출한다.</p>
+    <p id="demo"></p>
     <script>
-        onBtn = document.getElementById("on");
-        offBtn=document.getElementById("off");
-        lightImg=document.getElementById("myImage");
-        function turnOn(){
-            lightImg.src="./img/on.png";
-        }
-        function turnOff(){
-            lightImg.src="./img/off.png";
+        let $arrPar=document.getElementById("demo");
+        let text="";
+        const fruits=["apple","orange","cherry"];
+        fruits.forEach(myFunction)
+        $arrPar.innerHTML=text;
+        function myFunction(item,index){
+            text+=index+": "+item+"<br>";
         }
     </script>
 </body>
