--- a/study.html
+++ b/study.html
@@ -1,6 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <style>
+        #demo{
+            border:1px solid #ccc;
+            background:lightyellow;
+            width:400px;
+        }
+    </style>
 </head>
 <body>
     <h1>자바스크립트 배열</h1>
