--- a/study.html
+++ b/study.html
@@ -1,28 +1,40 @@
-<!DOCTYPE html>
 <html>
+
 <head>
-    <style>
-        #demo{
-            border:1px solid #ccc;
-            background:lightyellow;
-            width:400px;
-        }
-    </style>
+  <meta charset="UTF-8" />
+  <style>
+    #res {
+      width: 600px;
+      height: 200px;
+      background-color: bisque;
+      border: 2px solid dodgerblue;
+    }
+  </style>
 </head>
+
 <body>
-    <h1>자바스크립트 배열</h1>
-    <h2>forEach() Method</h2>
-    <p>forEach()문은 배열의 각 요소를 반복해서 참조하는 함수를 호출한다.</p>
-    <p id="demo"></p>
-    <script>
-        let $arrPar=document.getElementById("demo");
-        let text="";
-        const fruits=["apple","orange","cherry"];
-        fruits.forEach(myFunction)
-        $arrPar.innerHTML=text;
-        function myFunction(item,index){
-            text+=index+": "+item+"<br>";
+  <div id="res"></div>
+  <script>
+      resDiv = document.getElementById("res");
+      let htmlTxt="<h1> 객체의 사용과 this 연산자</h1>";
+      const pet={
+        name : '구름',
+        eat : function(food){
+          htmlTxt += '<h3>'+this.name + '은'+food+'을 먹습니다.</h3>';
         }
-    </script>
+      }
+      pet.eat('밥')
+
+      const student={};
+      student.name='소마';
+      student.hobby='악기';
+      student.hope='생명공학자';
+      console.log(JSON.stringify(student,null,1));
+      htmlTxt+= '<h3>' + JSON.stringify(student)+'</h3>';
+      delete student.hope;
+      htmlTxt+='<h3>'+JSON.stringify(student)+'</h3>';
+      resDiv.innerHTML=htmlTxt;
+  </script>
 </body>
+
 </html>
