--- a/study.html
+++ b/study.html
@@ -1,39 +1,56 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 
 <head>
-  <meta charset="UTF-8" />
+  <meta charset="UTF-8">
+  <title>Document</title>
   <style>
-    #res {
-      width: 600px;
-      height: 200px;
-      background-color: bisque;
-      border: 2px solid dodgerblue;
+    #key{
+      width:400px;
+      height:100px;
+      border : 1px solid dodgerblue;
     }
+    #down{color:blue;}
+    #up{color:red;}
+
   </style>
 </head>
 
 <body>
-  <div id="res"></div>
+  <h3 id="idh3">1. 키 이벤트 속성 문제 : 눌러진 key가 div영역에 나타나도록 하시오.</h3>
+  <div id="key"></div>
+  <hr>
+  <textarea cols="30" rows="3" autofocus></textarea>
+  <hr>
+  <button id="id1">클릭</button><br><br>
+  <button id="id2">클릭</button><br><br>
+  <button id="id3">클릭</button><br><br>
   <script>
-      resDiv = document.getElementById("res");
-      let htmlTxt="<h1> 객체의 사용과 this 연산자</h1>";
-      const pet={
-        name : '구름',
-        eat : function(food){
-          htmlTxt += '<h3>'+this.name + '은'+food+'을 먹습니다.</h3>';
-        }
-      }
-      pet.eat('밥')
 
-      const student={};
-      student.name='소마';
-      student.hobby='악기';
-      student.hope='생명공학자';
-      console.log(JSON.stringify(student,null,1));
-      htmlTxt+= '<h3>' + JSON.stringify(student)+'</h3>';
-      delete student.hope;
-      htmlTxt+='<h3>'+JSON.stringify(student)+'</h3>';
-      resDiv.innerHTML=htmlTxt;
+  const deyDiv = document.getElementById("key");
+  const msgH3 = document.getElementById('idh3');
+  document.addEventListener('deydown',function(eventObj){
+    deyDiv.innerHTML = `<h1 id = 'down'>deydown : ${eventObj}</h1>`;
+  });
+  document.addEventListener('keyup',function(eventObj){
+    deyDiv.innerHTML = `<h1 id = 'up'>deydown : ${eventObj}</h1>`;
+  });
+  const textArea = document.querySelector("textarea");
+  textArea.addEventListener('keyup',function(){
+    msgH3.textContent=`글자수:${textArea.value.length}`;
+  });
+  const btn1=document.getElementById("id1");
+  const btn2=document.getElementById("id2");
+  const btn3=document.getElementById("id3");
+  btn1.addEventListener('click',function(){
+    btn1.textContent='객체변수의 속성으로 변경';
+  });
+  btn2.addEventListener('click',function(eventObj){
+    eventObj.currentTarget.textContent='이벤트객체의 currentTarget속성으로 사용';
+  });
+  btn3.addEventListener('click',function(eventObj){
+    btn1.textContent='this 의 속성으로 변경';
+  })
   </script>
 </body>
 
